--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Valya",
   "license": "ISC",
   "devDependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "browser-sync": "^2.27.4",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
@@ -18,6 +19,7 @@
     "gulp-sass": "^5.0.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.0",
+    "rateyo": "^2.3.2",
     "sass": "^1.35.2",
     "slick-carousel": "^1.8.1"
   }
